@@ -1,5 +1,8 @@
 [b]Version 0.5.61[/b] (not released yet):
 
+(2007-09-23)
+ * Updated the Romanian translation.
+
 (2007-09-20)
  * Updated the Ukrainian translation.
  * Added new option for command line: -add-to-playlist. If another instance
